@@ -14,21 +14,29 @@ defined('_JEXEC') or die;
 
 ?>
 <form action="<?php echo JRoute::_('index.php?option=com_installer&view=warnings');?>" method="post" name="adminForm" id="adminForm">
-<?php $errors = count($this->errors); ?>
-<?php if (!strncmp($this->schemaVersion, JVERSION, 5) === 0) : ?>
-		<?php $errors++; ?>
-<?php endif; ?>
+<?php 
+	$errors = count($this->errors); 
+	if (!strncmp($this->schemaVersion, JVERSION, 5) === 0) : 
+			$errors++; 
+	endif; 
+?>
+
 <?php if ($errors === 0) : ?>
 	<p class="nowarning"><?php echo JText::_('COM_INSTALLER_MSG_DATABASE_OK'); ?></p>
+	<?php echo JHtml::_('sliders.start', 'database-sliders', array('useCookie'=>1)); ?>
+		
 <?php else : ?>
 	<p class="warning"><?php echo JText::_('COM_INSTALLER_MSG_DATABASE_ERRORS'); ?></p>
 	<?php echo JHtml::_('sliders.start', 'database-sliders', array('useCookie'=>1)); ?>
+	
 	<?php $panelName = JText::plural('COM_INSTALLER_MSG_N_DATABASE_ERROR_PANEL', $errors); ?>
 	<?php echo JHtml::_('sliders.panel', $panelName, 'error-panel'); ?>
+		<fieldset class="panelform">
 	<ul>
 	<?php if (!strncmp($this->schemaVersion, JVERSION, 5) === 0) : ?>
 		<li><?php echo JText::sprintf('COM_INSTALLER_MSG_DATABASE_SCHEMA_ERROR', $this->schemaVersion, JVERSION); ?></li>
 	<?php endif; ?>
+	
 	<?php foreach($this->errors as $line => $error) : ?>
 	<?php $key = 'COM_INSTALLER_MSG_DATABASE_' . $error->queryType;
 		$msgs = $error->msgElements;
@@ -39,15 +47,18 @@ defined('_JEXEC') or die;
 		$message = JText::sprintf($key, $file, $msg0, $msg1, $msg2); ?>
 		<li><?php echo $message; ?></li>
 	<?php endforeach; ?></ul>
+	</fieldset>
 <?php endif; ?>
 
 <?php echo JHtml::_('sliders.panel', JText::_('COM_INSTALLER_MSG_DATABASE_INFO'),'furtherinfo-pane'); ?>
+	<fieldset class="panelform">
 <ul>
 	<li><?php echo JText::sprintf('COM_INSTALLER_MSG_DATABASE_SCHEMA_VERSION', $this->schemaVersion); ?></li>
 	<li><?php echo JText::sprintf('COM_INSTALLER_MSG_DATABASE_DRIVER', JFactory::getDbo()->name); ?></li>
 	<li><?php echo JText::sprintf('COM_INSTALLER_MSG_DATABASE_CHECKED_OK', count($this->results['ok'])); ?></li>
 	<li><?php echo JText::sprintf('COM_INSTALLER_MSG_DATABASE_SKIPPED', count($this->results['skipped'])); ?></li>
 </ul>
+</fieldset>
 <?php echo JHtml::_('sliders.end'); ?>
 
 <div class="clr"> </div>
